dropbox integration added, documentation updated
