# docs/swagger.json
@@ -117,7 +117,7 @@
         },
         "/segments/get-history-report-link": {
             "get": {
-                "description": "Returns the link to the report that contains history of segment assignments for given user in given month, year",
+                "description": "Returns the link to the report that contains history of segment assignments for given user in given month, year. Link to the report expires in four hours.",
                 "produces": [
                     "application/json"
                 ],
@@ -151,7 +151,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/segments.GetSegmentsForUserOutDTO"
+                            "$ref": "#/definitions/segment_handlers.getSegmentsHistoryReportLinkOutDTO"
                         }
                     }
                 }
@@ -240,6 +240,17 @@
         }
     },
     "definitions": {
+        "segment_handlers.getSegmentsHistoryReportLinkOutDTO": {
+            "type": "object",
+            "properties": {
+                "expirationTime": {
+                    "type": "string"
+                },
+                "reportLink": {
+                    "type": "string"
+                }
+            }
+        },
         "segments.AddSegmentEntry": {
             "type": "object",
             "required": [
